# micro-nn

./: README.md  pyproject.toml
src/: Digraph.gv  main.py  utils.py
src/nn/: nn.py  value.py
