[tool.poetry]
name = "micro-nn"
version = "0.1.0"
description = ""
authors = ["Dennis Cui <dennis.z.cui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
